avancement sur les listes
id partage généré

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -10,9 +10,9 @@ default:
     #robots:       index, follow
     charset:      UTF-8
     
-  stylesheets:    [bootstrap.min.css, bootstrap-theme.min.css, font-awesome.min.css, nico.css, max.css]
+  stylesheets:    [bootstrap.min.css, bootstrap-theme.min.css, font-awesome.min.css, jquery.simplecolorpicker.css, nico.css, max.css]
 
-  javascripts:    [jquery-1.11.2.js, bootstrap.min.js, max.js, nico.js]
+  javascripts:    [jquery-1.11.2.js, bootstrap.min.js, jquery.simplecolorpicker.js, max.js, nico.js]
 
   has_layout:     on
   layout:         layout
